[package]
name = "ktapper"
version = "0.1.0"
edition = "2024"

[dependencies]
directories-next = "2.0.0"
htils = { version = "0.2.0", features = ["string"] }
random_word = { version = "0.5.0", features = [
    "en",
    "ru",
    "de",
    "es",
    "fr",
    "ja",
    "zh",
] }
ratatui = "0.29.0"
toml = "0.9.5"
serde = { version = "1.0", features = ["derive"] }
once_cell = "1.21.3"
